Back/forward mouse buttons cause window to completely lose focus
Affected version
- Nightly flatpak: Yes
- Other: F37 Silverblue, nautilus-43~beta.1-2.fc37.x86_64
Steps to reproduce
- Open a folder
- Go back with the back mouse button
Current behavior
Sometimes the file list will be unfocused, which means one extra click is required for any action (to focus the list first).
Expected behavior
The file list is always focused.
Additional information
On this video after opening the Desktop folder the list is focused, as you can tell by the working hover. After opening the Videos folder the list is not focused, as you can tell by the missing hover. One extra click is needed to focus the list before I can select or open a folder again.