main: Fix focus state when using back or forward buttons

handle_pointing_event() only checks for buttons 1-5
on a mouse click release.  If you use buttons above 5
like the back and forward buttons, in many cases you'll
get a strange unfocussed window.  Add GDK_BUTTON8_MASK
and GDK_BUTTON9_MASK with checks in handle_pointing_event()

Fixes: https://gitlab.gnome.org/GNOME/gtk/-/issues/5301